Updated with Azure-ness

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "Harrison's consciousness, just better and with less Evan Williams.",
   "dependencies": {
     "hubot": "^2.15.0",
+    "hubot-azure-scripts": "^0.1.6",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.1",
     "hubot-google-translate": "^0.2.0",
