--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0"
   },
+  "scripts": {
+    "start": "bash ./bin/hubot"
+  },
   "engines": {
     "node": "0.10.x"
   }
