--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "hubot-slack": "^3.3.0"
   },
   "scripts": {
-    "start": "bash ./bin/hubot"
+    //"start": "bash ./bin/hubot"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "0.12.x"
   }
 }
