--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.3.0"
+    "hubot-slack": "^3.3.0",
+    "hubot-stock": "0.0.1"
   },
   "engines": {
     "node": "0.12.x"
