--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
     "coffee-script": "^1.9.3",
     "hubot": "^2.15.0",
     "hubot-azure-scripts": "^0.1.6",
+    "hubot-bro": "^0.1.1",
+    "hubot-conspire": "^1.0.0",
     "hubot-diagnostics": "0.0.1",
+    "hubot-dogeme": "^1.0.0",
     "hubot-google-images": "^0.2.1",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.1",
     "hubot-maps": "0.0.2",
+    "hubot-meme": "^1.2.0",
+    "hubot-plusplus": "^1.1.5",
     "hubot-pugme": "^0.1.0",
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.3.0"
+    "hubot-slack": "^3.3.0",
+    "hubot-stock": "0.0.1"
   },
   "engines": {
     "node": "0.12.x"
