--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
-    "hubot-stock": "0.0.1"
+    "hubot-stock": "0.0.1",
+    "hubot-twss": "0.0.4"
   },
   "engines": {
     "node": "0.12.x"
