--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
     "hubot-stock": "0.0.1",
-    "hubot-twss": "0.0.4"
+    "twss": "^0.1.6"
   },
   "engines": {
     "node": "0.12.x"
