--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hubot": "^2.16.0",
     "hubot-azure-scripts": "^0.1.6",
     "hubot-bro": "^0.1.1",
+    "hubot-business-cat": "^1.4.1",
     "hubot-conspire": "^1.0.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-dogeme": "^1.0.0",
